--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="for-sticky">
       <!--LOGO-->
       <div class="col-md-2 col-xs-6 logo">
-        <a href="index.html"><img alt="logo" class="logo-nav" src="images/logo.png"></a>
+        <a href="index.html"><img alt="logo" class="logo-nav" src="images/logoUpper.png"></a>
       </div>
       <!--/.LOGO END-->
     </div>
@@ -188,13 +188,7 @@
                 <span>Work</span>
               </h3>
               <p class="content-detail">
-                IT Professional with over 3 years of experience specializing in IT project management for an
-                international cloud company. I can implement effective management, communication, leadership, and
-                organizational IT strategies.
-                <br>
-                <br>
-                Easily adaptive to change in work environment. Strong background in AWS cloud computing and customer
-                relations. Striving to leverage my IT management Skills at G-TECH.
+                IT Professional with over 4 years of experience specializing as Scrum Master / IT Project Manager for a software development international cloud company. I can implement effective management, communication, leadership, and organizational IT strategies; easily adaptive to change in work environment. Strong background in AWS cloud computing and customer relations.
               </p>
             </div>
             <div class="col-md-9 content-right">
@@ -205,7 +199,7 @@
                     <div class="decription-wrap">
                       <div class="image-bg">
                         <p class="desc">
-                          My Resume
+                          Example
                         </p>
                       </div>
                     </div>
@@ -244,28 +238,6 @@
                     </div>
                   </a>
                 </li>
-                <li class="col-md-6">
-                  <a href="images/bw-5.png"><img alt="image" src="images/bw-5.png">
-                    <div class="decription-wrap">
-                      <div class="image-bg">
-                        <p class="desc">
-                          Example
-                        </p>
-                      </div>
-                    </div>
-                  </a>
-                </li>
-                <li class="col-md-6">
-                  <a href="images/bw-6.png"><img alt="image" src="images/bw-6.png">
-                    <div class="decription-wrap">
-                      <div class="image-bg">
-                        <p class="desc">
-                          Example
-                        </p>
-                      </div>
-                    </div>
-                  </a>
-                </li>
               </ul>
               <!--/.PORTFOLIO IMAGE END-->
             </div>
@@ -280,7 +252,7 @@
           <div class="row">
             <div class="col-md-3">
               <h3 class="title-small">
-                <span>Services</span>
+                <span>Knowledge</span>
               </h3>
               <p class="content-detail">
                 Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
@@ -296,7 +268,7 @@
                         c
                       </h3>
                       <p class="head-sm">
-                        MARKETING
+                        MS 365
                       </p>
                       <p class="text-grey">
                         Typi non habent claritatem insitam est usus legentis in iis qui facit eorum claritatem.
@@ -310,7 +282,7 @@
                         b
                       </h3>
                       <p class="head-sm">
-                        WEB DESIGN
+                        G Suite
                       </p>
                       <p class="text-grey">
                         Typi non habent claritatem insitam est usus legentis in iis qui facit eorum claritatem.
@@ -324,7 +296,7 @@
                         d
                       </h3>
                       <p class="head-sm">
-                        UI
+                        Atlassian
                       </p>
                       <p class="text-grey">
                         Typi non habent claritatem insitam est usus legentis in iis qui facit eorum claritatem.
@@ -340,7 +312,7 @@
                         f
                       </p>
                       <p class="head-sm">
-                        DIRECTOR
+                        AWS 
                       </p>
                       <p class="text-grey">
                         Typi non habent claritatem insitam est usus legentis in iis qui facit eorum claritatem.
@@ -354,7 +326,7 @@
                         p
                       </h3>
                       <p class="head-sm">
-                        UX DESIGN
+                        Agile
                       </p>
                       <p class="text-grey">
                         Typi non habent claritatem insitam est usus legentis in iis qui facit eorum claritatem.
@@ -368,7 +340,7 @@
                         m
                       </h3>
                       <p class="head-sm">
-                        FRONT END
+                        Freshworks
                       </p>
                       <p class="text-grey">
                         Typi non habent claritatem insitam est usus legentis in iis qui facit eorum claritatem.
@@ -554,7 +526,7 @@
                             2013 - 2017
                           </h2>
                           <p class="job">
-                            Information System
+                            Bachelor of Technology in Computer Systems
                           </p>
                           <p class="company">
                             ITD
@@ -562,10 +534,20 @@
                           <hr>
                           <div class="text-detail">
                             <p>
-                              Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum.
-                              Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit
-                              litterarum formas humanita per seacula quarta decima et quinta decima. Eodem modo typi,
-                              qui nunc nobis videntur parum clari, fiant sollemnes.
+                              Graduated with honors
+                              <br>
+                              Relevant projects:
+                              <br>
+                               - Creation of an application for the disclosure of university careers, the virtual tour of the institution, and essential advice for new students.
+                               <br>
+                              Relevant courses:
+                              <br>
+                               - Cisco CCNA
+                               <br>
+                              Extracurricular activities: <br>
+                               - Part of the theater team of the University in the national program <br>
+                               - Part of the artistic team of the University in the national program <br>
+                               - Part of the University basketball team
                             </p>
                           </div>
                         </div>
@@ -581,6 +563,7 @@
       <!--/.EDUCATION END-->
 
       <!--TESTIMONIAL-->
+      <!--
       <section id="testimonial">
         <div class="container">
           <div class="row wrap-testimonial">
@@ -622,6 +605,7 @@
         </div>
         <div class="mask-testimonial"></div>
       </section>
+      -->
       <!--/.TESTMONIAL END-->
 
       <!--BLOG-->
@@ -798,15 +782,17 @@
       <footer>
         <div class="footer-top">
           <ul class="socials">
-            <li class="facebook">
-              <a href="#" data-hover="Facebook">Facebook</a>
+            <li class="LinkedIn">
+              <a href="https://www.linkedin.com/in/luisjreyesrguez/" target="_blank" data-hover="LinkedIn">LinkedIn</a>
             </li>
-            <li class="twitter">
-              <a href="#" data-hover="Twitter">Twitter</a>
+            <!--
+            <li class="GitHub">
+              <a href="#" data-hover="GitHub">GitHub</a>
             </li>
-            <li class="gplus">
-              <a href="#" data-hover="Google +">Google +</a>
+            <li class="Credily">
+              <a href="#" data-hover="Credly">Credly </a>
             </li>
+             -->
           </ul>
         </div>
 
