--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
               <!--PORTFOLIO IMAGE-->
               <ul class="portfolio-image">
                 <li class="col-md-6">
-                  <a href="images/bw-1.png"><img alt="image" src="images/bw-1.png">
+                  <a href="images/M1 (1).jpg"><img alt="image" src="images/M1 (1).jpg">
                     <div class="decription-wrap">
                       <div class="image-bg">
                         <p class="desc">
@@ -218,7 +218,7 @@
                   </a>
                 </li>
                 <li class="col-md-6">
-                  <a href="images/bw-2.png"><img alt="image" src="images/bw-2.png">
+                  <a href="images/M1 (2).jpg"><img alt="image" src="images/M1 (2).jpg">
                     <div class="decription-wrap">
                       <div class="image-bg">
                         <p class="desc">
@@ -229,7 +229,7 @@
                   </a>
                 </li>
                 <li class="col-md-6">
-                  <a href="images/bw-3.png"><img alt="image" src="images/bw-3.png">
+                  <a href="images/M1 (3).jpg"><img alt="image" src="images/M1 (3).jpg">
                     <div class="decription-wrap">
                       <div class="image-bg">
                         <p class="desc">
@@ -240,7 +240,7 @@
                   </a>
                 </li>
                 <li class="col-md-6">
-                  <a href="images/bw-4.png"><img alt="image" src="images/bw-4.png">
+                  <a href="images/M1 (4).jpg"><img alt="image" src="images/M1 (4).jpg">
                     <div class="decription-wrap">
                       <div class="image-bg">
                         <p class="desc">
@@ -267,8 +267,7 @@
                 <span>Knowledge</span>
               </h3>
               <p class="content-detail">
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                laoreet dolore magna aliquam erat volutpat.
+                These are the main knowledge that I consider I have more expertise.
               </p>
             </div>
             <div class="col-md-9 content-right">
@@ -283,7 +282,7 @@
                         MS 365
                       </p>
                       <p class="text-grey">
-                        Typi non habent claritatem insitam est usus legentis in iis qui facit eorum claritatem.
+                        I have used the MS 365 suite for agile project management, documentation creation, and stakeholder communication.
                       </p>
                     </div>
                   </li>
@@ -297,7 +296,7 @@
                         G Suite
                       </p>
                       <p class="text-grey">
-                        Typi non habent claritatem insitam est usus legentis in iis qui facit eorum claritatem.
+                        I have used the G-suite for agile project management, documentation creation, and stakeholder communication.
                       </p>
                     </div>
                   </li>
@@ -311,7 +310,7 @@
                         Atlassian
                       </p>
                       <p class="text-grey">
-                        Typi non habent claritatem insitam est usus legentis in iis qui facit eorum claritatem.
+                        I have used the Atlassian suite for agile project management using Jira, and documentation creation using Confluence.
                       </p>
                     </div>
                   </li>
@@ -327,7 +326,7 @@
                         AWS 
                       </p>
                       <p class="text-grey">
-                        Typi non habent claritatem insitam est usus legentis in iis qui facit eorum claritatem.
+                        I have led E2E project teams based on the AWS cloud, applying CI/CD processes, Infrastructure as a code,and Serverless Framework.
                       </p>
                     </div>
                   </li>
@@ -341,7 +340,7 @@
                         Agile
                       </p>
                       <p class="text-grey">
-                        Typi non habent claritatem insitam est usus legentis in iis qui facit eorum claritatem.
+                        I have led E2E project teams, Scrum teams, Support, and Operations teams, using DevOps, and Agile methodologies.
                       </p>
                     </div>
                   </li>
@@ -355,7 +354,7 @@
                         Freshworks
                       </p>
                       <p class="text-grey">
-                        Typi non habent claritatem insitam est usus legentis in iis qui facit eorum claritatem.
+                        I have participated in SaaS implementation projects of the Freshworks suite for Service Desks, Help Desks, Knowledge Bases, and CMDBs.
                       </p>
                     </div>
                   </li>
@@ -456,8 +455,7 @@
                 <span>Skills</span>
               </h3>
               <p class="content-detail">
-                Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                laoreet dolore magna aliquam erat volutpat.
+                These are the main skills which I consider I have more expertise.
               </p>
             </div>
             <div class="col-md-9 content-right">
@@ -630,7 +628,7 @@
               <div class="row">
                 <div class="col-md-6 col-md-offset-3">
                   <p class="content-details text-center">
-                    This year I decided to start writing, here you can find my notes on the most recent. 
+                    This year I decided to start writing, here you can find my most recent notes. 
                   </p>
                 </div>
               </div>
