--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Luis Reyes</title>
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
   <meta content="width=device-width, initial-scale=1" name="viewport">
-  <meta content="Bodo - Simple One Page Personal" name="description">
-  <meta content="BdgPixel" name="Luis Javier Reyes Rodriguez">
+  <meta content="Luis Reyes Personal Page" name="description">
+  <meta content="LR" name="Luis Javier Reyes Rodriguez">
   <!--Fav-->
   <link href="images/LR.ico" rel="shortcut icon">
 
